--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  text-align: center; 
+  
+  background: rgb(28, 91, 57);
 }
 
 .App-logo {
